# lox-interpreter

./: .gitignore  CMakeLists.txt  README.md  a.out  ast_printer.cpp  compile.sh  declr.h  environment.cpp  environment.h  expr.cpp  instructions.txt  interpreter.cpp  interpreter.h  lox_callable.cpp  lox_callable.h  lox_class.cpp  lox_function.cpp  lox_instance.cpp  lox_test  lox_test.js  main.cpp  native_funcs.cpp  native_funcs.h  parser.cpp  resolver.cpp  resolver.h  return.cpp  scanner.cpp  scanner.h  stmt.cpp  test1.lox  token.cpp  token.h  types.h  util.cpp  util.h
helper/: custom_stack.h  custom_stack.tpp  object.cpp  object.h
tests/: binary.lox  class.lox  control_flow.lox  function.lox  function_2.lox  inheritance.lox  lox_test_1.lox  lox_test_2.lox  resolving.lox  statements.lox
tool/: GenerateAst.cpp
unused_header_files/: environment.h  interpreter.h  lox_callable.h  lox_class.h  lox_function.h  lox_instance.h  resolver.h
